<package>
    <name>backup_recovery</name>
    <version>0.0.0</version>
    <description>

        This package provides a recovery behavior for the navigation stack that attempts backup into free space

    </description>
    <author>Johannes Kummert</author>
    <maintainer email="jkummert@techfak.uni-bielefeld.de">Johannes Kummert</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>base_local_planner</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>eigen</run_depend>


    <export>
        <nav_core plugin="${prefix}/backup_plugin.xml" />
    </export>

</package>
